--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
@@ -842,7 +842,7 @@
 <ul><li>Remember: Quenya <i>i</i> is both the definite article “the” and the indeclinable relative pronoun “who/which/that”.</li></ul></li>
 </ul>
 
-<p>In a longer phrase like this, omitting the <i>ná</i> entirely can be confusing, so the speaker can tack a <i>ná</i> onto the end as a way of indicating that “this longer sentence is in fact a ‘to be’ statement”. The net result is that the <i>ná</i> often appears <u>after</u> the predicate noun or adjective. This pattern generalizes to other cases, so that impersonal “it is good” is usually <i>mára ná</i> rather than <i>ná mara</i>, “you will be good” may be <i>mára nauval</i> rather than <i>nauval mára</i>, and you can even say <i>elda nanyë</i> “an elf am I”.</p>
+<p>In a longer phrase like this, omitting the <i>ná</i> entirely can be confusing, so the speaker can tack a <i>ná</i> onto the end as a way of indicating that “this longer sentence is in fact a ‘to be’ statement”. The net result is that the <i>ná</i> often appears <u>after</u> the predicate noun or adjective. This pattern generalizes to other cases, so that impersonal “it is good” is usually <i>mára ná</i> rather than <i>ná mára</i>, “you will be good” may be <i>mára nauval</i> rather than <i>nauval mára</i>, and you can even say <i>elda nanyë</i> “an elf am I”.</p>
 
 <p>Thus there are three places where <i>ná</i> might appear in a phrase:</p>
 
