--- a/src/main/webapp/intro-quenya/index.html
+++ b/src/main/webapp/intro-quenya/index.html
@@ -18,6 +18,7 @@
 
 <center><h1><u>Eldamo Introductory Quenya</u></h1></center>
 <center>by Paul Strack</center>
+<center>version 1.0 (April 28, 2023)</center>
 
 <ul>
 <li><b><a href="eldamo-intro-quenya-01.html">Chapter 1</a></b> - Course Introduction, Quenya Crash Course</li>
