--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -14,6 +14,7 @@
 <ul>
 <li>Dictionary entries for semantic category 5 = Food and Drink.</li>
 <li>Finalized the Eldamo Introductory Quenya course as version 1.0.</li>
+<li>Updated Quenya <i>w-</i> words to <i>v-</i> [<i>w</i>] words for consistency with the course.</li>
 </ul>
 <p>v0.8.4.3 (March 9, 2023)</p>
 <ul>
