--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
@@ -2116,7 +2116,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 
 <ol class="exercise-list" start="7">
 <li><i>I vesta nánë mára.</i></li>
-<li><i>Lëa ar Oren ontanë yondo Miro.</i></li>
+<li><i>Lëa ar Oren ontaner yondo Miro.</i></li>
 <li><i>Lëa mélë i yondo veruryo.</i></li>
 <li><i>Tá Lëa nostanë yeldë Tilë.</i></li>
 <li><i>Tilë melë hánorya Miro.</i></li>
@@ -2127,7 +2127,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 
 <ol class="exercise-list tengwar-block" start="7">
 <li><span class="transcribe" data-lang="q" data-value="I vesta nánë mára">I vesta nánë mára</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Lëa ar Oren ontanë yondo Miro">Lëa ar Oren ontanë yondo Miro</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Lëa ar Oren ontaner yondo Miro">Lëa ar Oren ontaner yondo Miro</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Lëa mélë i yondo veruryo">Lëa mélë i yondo veruryo.</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Tá Lëa nostanë yeldë Tilë">Tá Lëa nostanë yeldë Tilë</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Tilë melë hánorya Miro">Tilë melë hánorya Miro</span></li>
