--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
@@ -485,7 +485,7 @@
 
 <p><a id="c3-2-3-2"></a><b>3.2.3.2 Independent Possessives:</b> There are a few examples of independent possessive pronouns in Tolkien’s writing: <i>ninya</i> “my” (LR/72), <i>menya</i> “our” (VT43/11). Where they appeared, they were used as adjectives: <i>ninya atar</i> “my father”, <i>menyë rohtar</i> “our sins”; the second example indicates they were made plural to agree with plural nouns like other adjectives. Assuming these examples are representative, the pattern is clear: add <i>-nya</i> to an independent pronoun to get the independent possessive. For example, we would expect *<i>lyenya</i> for “your (polite)”.</p>
 
-<p>These independent possessives are used much less frequently than the possessive suffixes. <span class="advanced-topic">Speculative:</span> For this reason, it has become established practice to use them as possessed pronouns as well, indicating a thing possessed: <i>ta ninya (ná)</i> “that (is) mine”, <i>cauvalme menya</i> “we will receive ours”.</p>
+<p>These independent possessives are used much less frequently than the possessive suffixes. <span class="advanced-topic">Speculative:</span> For this reason, it has become established practice to use them as possessive pronouns as well, indicating a thing possessed: <i>ta ninya (ná)</i> “that (is) mine”, <i>cauvalme menya</i> “we will receive ours”.</p>
 
 <div class="advanced-topic">
 <h2><a id="c3-2-4"></a>3.2.4 How do we know this?</h2>
