--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,13 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.8.5</p>
+<p>v0.8.6</p>
+<ul>
+<li>Dictionary entries for semantic category 6 = Clothing and Adornment.</li>
+<li>More entries from PE17/139-142 with the help of Gilruin.</li>
+<li>Beta “Advanced Reference Search”.</li>
+</ul>
+<p>v0.8.5 (April 28, 2023)</p>
 <ul>
 <li>Dictionary entries for semantic category 5 = Food and Drink.</li>
 <li>Finalized the Eldamo Introductory Quenya course as version 1.0.</li>
