--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,12 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.8.6</p>
+<p>v0.8.7</p>
+<ul>
+<li>Dictionary entries for semantic category 6 = Clothing and Adornment.</li>
+<li>More entries from PE17/139-142 with the help of Gilruin.</li>
+</ul>
+<p>v0.8.6 (May 26, 2023)</p>
 <ul>
 <li>Dictionary entries for semantic category 6 = Clothing and Adornment.</li>
 <li>More entries from PE17/139-142 with the help of Gilruin.</li>
@@ -26,7 +31,7 @@
 <ul>
 <li>Finished Eldamo Introductory Quenya Chapters 7-15.</li>
 </ul>
-<p>v0.8.4.2</p>
+<p>v0.8.4.2 (Dec 11, 2022)</p>
 <ul>
 <li>Minor release as I worked on Eldamo Introductory Quenya Chapters 1-6.</li>
 <li>Updated grammar entries to reflect my new preference for assimilative partitive plurals: <i>atanéli</i> &gt;&gt; <i>atalli</i>.</li>
