--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
@@ -114,7 +114,7 @@
 
 <p>Note that Tolkien consistently use the <i>ñ</i> sign for a back-nasal (IPA [ŋ]), and not for a palatal nasal as seen in Spanish spelling (IPA [ɲ]). Thus Quenya <i>ñ</i> is a “ng” sound as heard at the end of words like “sing” and not a Spanish-style “enye”. Note that this Spanish sound <u>does</u> occur in Quenya, but is spelled <i>ny</i> (see below).</p>
 
-<p><a id="c3-1-1-2"></a><b>3.1.1.2 Voiceless Consonants:</b> This last group of consonants in the list above are voiceless sounds that can be tricky for English speakers. Tolkien described voiceless <i>hr</i> and <i>hr</i> in Appendix E of <i>The Lord of the Rings</i>:</p>
+<p><a id="c3-1-1-2"></a><b>3.1.1.2 Voiceless Consonants:</b> This last group of consonants in the list above are voiceless sounds that can be tricky for English speakers. Tolkien described voiceless <i>hl</i> and <i>hr</i> in Appendix E of <i>The Lord of the Rings</i>:</p>
 
 <blockquote>LH represents this sound [L] when voiceless (usually derived from initial <i>sl-</i>). In (archaic) Quenya this is written <i>hl</i>, but was in the Third Age usually pronounced as <i>l</i>.</blockquote>
 
