--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-05.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-05.html
@@ -1206,7 +1206,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 <p><a id="c5-5-2-2"></a><b>5.5.2.2 Verb negation with <i>lá</i>:</b> The quasi-verb <i>lá-</i> is also used to negate other verbs. In this case only the form <i>lá</i> is used along with the subject pronoun suffix (if appropriate), but without any verb tense: the verb tense is on the negated verb instead. For example:</p>
 
 <ul>
-<li><i>lás masta massa</i> “he/she is not baking bread”.</li>
+<li><i>lás mastëa massa</i> “he/she is not baking bread”.</li>
 <li><i>i atan lá cambë macil</i> “the man did not receive a sword”.</li>
 <li><i>lán menuva i ostonna enar</i> “I will not go to the city tomorrow”.</li>
 </ul>
