--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-11.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-11.html
@@ -509,7 +509,7 @@
 <p>As with the discussion of advanced verb classes in <a href="eldamo-intro-quenya-08.html#c8-1">Chapter 8, Section 8.1</a>, the information below can be considered an advanced topic. These advanced declensions draw heavily on Raccoon’s research in his <i>Tenguesta Goldorinwa</i>, most notably his examination of <a href="https://feophan.github.io/tenguesta_ngoldorinwa/morph/nou/">Noun Declensions</a>, though I do not agree with him on all the particulars. All of the following can be considered optional. If you stick with the simpler system of noun cases described earlier in the course, you will still be correct most of the time.</p>
 </div>
 
-<p>Note that in the tables below, the “long” nouns are those that trigger prosodic lengthening (see <a href="eldamo-intro-quenya-06.html#c6-1-3">Chapter 6, Section §6.1.3</a>), namely those with three or more syllables whose second-to-last syllable is light: a short vowel followed by zero or one consonant. For example, for purposes of prosodic lengthening <i>lícuma</i> “candle” counts as a long a-noun, but <i>mahalma</i> “throne” and <i>tincotéma</i> “t-series” do not. In addition, entries whose form significantly differs from normal declensions are marked in <b><i>bold</i></b> with a footnote explaining the variation.</p>
+<p>Note that in the tables below, the “long” nouns are those that trigger prosodic lengthening (see <a href="eldamo-intro-quenya-06.html#c6-1-3">Chapter 6, Section §6.1.3</a>), namely those with three or more syllables whose second-to-last syllable is light: having a short vowel followed by zero or one consonant. For example, for purposes of prosodic lengthening <i>lícuma</i> “candle” counts as a long a-noun, but <i>mahalma</i> “throne” and <i>tincotéma</i> “t-series” do not. In addition, entries whose form significantly differs from normal declensions are marked in <b><i>bold</i></b> with a footnote explaining the variation.</p>
 
 <h2><a id="c11-3-1"></a>11.3.1 a-nouns and o-nouns</h2>
 
@@ -1279,7 +1279,7 @@
 <ul class="vocab-list">
 <li><b>caimasan</b> (<b>caimasamb-</b>) <i>n.</i> “bedroom”</li>
 <li><b>filit</b> (<b>filic-</b>) <i>n.</i> “sparrow, small bird”</li>
-<li><b>hiswa</b> <i>adj.</i> “grey [of weather]”</li>
+<li><b>hiswa</b> [<b>þ</b>] <i>adj.</i> “grey [of weather]”</li>
 <li>^<b>hó</b> <i>n.</i> “owl”</li>
 <li><b>imbilat</b> <i>n.</i> “deep valley” ²</li>
 <li><b>lícuma</b> <i>n.</i> “candle”</li>
@@ -1398,7 +1398,7 @@
 <ul class="vocab-list">
 <li><b>caimasan</b> (<b>caimasamb-</b>) <i>n.</i> “bedroom”</li>
 <li><b>filit</b> (<b>filic-</b>) <i>n.</i> “sparrow, small bird”</li>
-<li><b>hiswa</b> <i>adj.</i> “grey [of weather]”</li>
+<li><b>hiswa</b> [<b>þ</b>] <i>adj.</i> “grey [of weather]”</li>
 <li>^<b>hó</b> <i>n.</i> “owl”</li>
 <li><b>imbilat</b> <i>n.</i> “deep valley” ¹</li>
 <li><b>lícuma</b> <i>n.</i> “candle”</li>
