--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-13.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-13.html
@@ -328,7 +328,7 @@
 <li><b>hína</b> <i>n.</i> “child”<ul><li>irregular plural <b>híni</b> “children”</li></ul></li>
 <li><b>hir-</b> <i>v.</i> “to find”<ul><li><i>pa.t.</i> *<b>hirnë</b> “found”</li></ul></li>
 <li><b>Hísimë</b> [<b>þ</b>] <i>n.</i> “November, *Misty”</li>
-<li><b>hiswa</b> <i>adj.</i> “grey [of weather]”</li>
+<li><b>hiswa</b> [<b>þ</b>] <i>adj.</i> “grey [of weather]”</li>
 <li>^<b>hlaiwa</b> <i>adj.</i> “sick”</li>
 <li>#<b>hlar-</b> <i>v.</i> “to hear”<ul><li><i>pa.t.</i> ^<b>hlassë</b> “heard”</li></ul></li>
 <li><b>hlas</b> (<b>hlar-</b>) <i>n.</i> “ear”</li>
@@ -1035,7 +1035,7 @@
 <li><b>undómë</b> <i>n.</i> “twilight, dusk”</li>
 <li><b>undu</b> <i>adv.</i> “down, beneath”</li>
 <li><b>ungwë</b> <i>n.</i> “spider’s web”</li>
-<li><b>únotima</b> <i>adj.</i> “numberless, (lit.) uncountable”</li>
+<li><b>únótima</b> <i>adj.</i> “numberless, (lit.) uncountable”</li>
 <li><b>unquë</b> <i>n.</i> “a hollow”</li>
 <li><b>úra</b> <i>adj.</i> “hot [unpleasantly]”</li>
 <li><b>úrë</b> <i>n.</i> “heat”</li>
