--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-14.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-14.html
@@ -474,7 +474,7 @@
 <li>“green” <i>adj.</i> <b>laica</b></li>
 <li>“greetings (in happiness)” <i>interj.</i> <b>máriessë</b></li>
 <li>“grey” <i>adj.</i> <b>sinda</b> [<b>þ</b>]</li>
-<li>“grey (of weather)” <i>adj.</i> <b>hiswa</b></li>
+<li>“grey (of weather)” <i>adj.</i> <b>hiswa</b> [<b>þ</b>]</li>
 <li>“grey (misty)” <i>adj.</i> <b>mísë</b> [<b>þ</b>]</li>
 <li>“grow (older)” <i>v.</i> <b>ola-</b><ul><li>“grew (older)” <i>pa.t.</i> <b>olanë</b></li></ul></li>
 <li>“grow (of plants)” <i>v.</i> <b>ala-</b><ul><li>“grew (of plants)” <i>pa.t.</i> <b>alanë</b></li></ul></li>
@@ -775,7 +775,7 @@
 <li>“November” <i>n.</i> <b>Hísimë</b> [<b>þ</b>]</li>
 <li>“now” <i>adv.</i> <b>sí</b></li>
 <li>“number” <i>n.</i> <b>nótë</b></li>
-<li>“numberless” <i>adj.</i> <b>únotima</b></li>
+<li>“numberless” <i>adj.</i> <b>únótima</b></li>
 </ul>
 
 <hr/>
@@ -1212,7 +1212,7 @@
 <ul class="vocab-list">
 <li>“ugly” <i>adj.</i> <b>úvanima</b></li>
 <li>“ultimate” <i>adj.</i> <b>métima</b></li>
-<li>“uncountable” <i>adj.</i> <b>únotima</b></li>
+<li>“uncountable” <i>adj.</i> <b>únótima</b></li>
 <li>“under” <i>prep.</i> <b>nu</b></li>
 <li>“understand” <i>v.</i> <b>hanya-</b><ul><li>“understood” <i>pa.t.</i> *<b>hanyanë</b></li></ul></li>
 <li>“Universe” <i>n.</i> <b>Ëa</b></li>
