--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-08.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-08.html
@@ -773,7 +773,7 @@
 <ul class="vocab-list">
 <li><b>ai</b> <i>interj.</i> “ah, alas”</li>
 <li><b>oromar</b> (<b>oromard-</b>) <i>n.</i> “lofty hall”</li>
-<li><b>únotima</b> <i>adj.</i> “numberless, (lit.) uncountable” ¹</li>
+<li><b>únótima</b> <i>adj.</i> “numberless, (lit.) uncountable” ¹</li>
 <li><b>yén</b> <i>n.</i> “Elvish long year (144 solar years)”</li>
 </ul>
 
@@ -814,7 +814,7 @@ sweat mead-of in-the (lofty hall)-(pl.)
 
 <p><b>First phrase:</b> <i>Ai! Lassi lantar laurië súrinen.</i> The text begins with the interjection <i>Ai!</i> “Alas!”, a cry of lamentation. The subject of the first phrase is <i>lassi</i> “leaves” with the verb <i>lantar</i> “fall” in the plural to agree with it. This is followed by the adjective <i>laurië</i>, the plural of <i>laurëa</i> “golden” again in agreement with plurality of the subject. Since the adjective follows the verb, it is being used adverbially: “golden[ly]”, the colour of the leaves perhaps indicating they are falling in autumn. This is followed by instrumental <i>súrinen</i> “by (means of) wind”. The <i>i</i> in this last word is because the stem form of <i>súrë</i> “wind” is <i>súri-</i> and it is not a plural form; the plural would be <i>súr<u>í</u>nen</i> “by (means of) wind<u>s</u>”. Thus “Ah! Leaves fall golden[ly] by (means of) wind”.</p>
 
-<p><b>Second phrase:</b> <i>Yéni únótimë ve aldaron rámar.</i> The second phrase is descriptive of the falling leaves and the circumstances of their fall. In particular they have fallen over <i>yéni únotimë</i> “long years uncountable”, where <i>únotima</i> “uncountable” is plural to agree with its noun. A <i>yén</i> is an Elvish long year, equal to 144 solar years, a common time unit among the immortal Elves. The remainder of the phrase also describes the leaves: <i>ve aldaron rámar</i> “like trees’ wings”. Thus “long years uncountable as trees’ wings”. In context, the falling leaves are like the wings of trees and are a metaphor for the numberless years.</p>
+<p><b>Second phrase:</b> <i>Yéni únótimë ve aldaron rámar.</i> The second phrase is descriptive of the falling leaves and the circumstances of their fall. In particular they have fallen over <i>yéni únótimë</i> “long years uncountable”, where <i>únótima</i> “uncountable” is plural to agree with its noun. A <i>yén</i> is an Elvish long year, equal to 144 solar years, a common time unit among the immortal Elves. The remainder of the phrase also describes the leaves: <i>ve aldaron rámar</i> “like trees’ wings”. Thus “long years uncountable as trees’ wings”. In context, the falling leaves are like the wings of trees and are a metaphor for the numberless years.</p>
 
 <p><b>Third phrase:</b> <i>Yéni avánier ve lintë yuldar.</i> The subject of the third phrase is <i>yéni</i> “long years” with the verb <i>avánier</i> “have departed”, plural to agree with the subject. Their passing is <i>ve lintë yuldar</i> “like swift drinks”, or put more poetically “like swift draughts”. Here <i>linta</i> “swift” is made plural to agree with <i>yuldar</i> “draughts”. Thus “long years have departed like swift draughts”, or more appropriately for years: “long years have passed like swift draughts”.</p>
 
@@ -985,7 +985,7 @@ of the sweet mead in lofty halls ...
 <ul class="vocab-list">
 <li><b>ai</b> <i>interj.</i> “ah, alas”</li>
 <li><b>oromar</b> (<b>oromard-</b>) <i>n.</i> “lofty hall”</li>
-<li><b>únotima</b> <i>adj.</i> “numberless, (lit.) uncountable” ¹</li>
+<li><b>únótima</b> <i>adj.</i> “numberless, (lit.) uncountable” ¹</li>
 <li><b>yén</b> <i>n.</i> “Elvish long year (144 solar years)”</li>
 </ul>
 
